fix text alignment for terminal on mobile

--- a/site/site.scss
+++ b/site/site.scss
@@ -1281,5 +1281,6 @@ header .nav a {
     margin: 0;
     padding: 20px;
     color: #8CC152;
+    text-align: left;
   }
 }
